--- a/codeup-design.html
+++ b/codeup-design.html
@@ -17,7 +17,7 @@
             <ul class="nav w-100 justify-content-center">
                 <li class="order-md-3 order-lg-0 mr-lg-auto">
                     <a href="#" class="navbar-brand d-block w-100 mb-2 m-md-0 text-center">
-                        <img class="" width="105px" src="img/codeup-design/logo-cropped.png" alt="Codeup Design logo">
+                        <img class="" width="105px" src="img/logo.png" alt="Codeup Design logo">
                         <div class="brand-name d-block d-lg-inline text-center w-100">codeup design</div>
                     </a>
                 </li>
